# cpp-cmake-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-app-x64-debug.sh  build-arm-none-eabi-gcc-debug.sh  build-test-x64-debug.sh  build-x64-debug.sh  build.sh  exec-test-x64-debug.sh
cmake/modules/: platform.cmake
cmake/modules/architectures/arm/arm-cm0p/: architecture.cmake
cmake/modules/architectures/arm/arm-cm23/: memory-layout.ld
cmake/modules/architectures/arm/arm-cm3/: architecture.cmake
cmake/modules/architectures/arm/arm-cm33_tz/: memory-layout.ld
cmake/modules/architectures/arm/arm-cm7/: architecture.cmake
cmake/modules/architectures/none/x86-64/: architecture.cmake
cmake/modules/toolchains/arm-none-eabi-gcc/: toolchain.cmake
libs/: CMakeLists.txt
libs/submodule/: CMakeLists.txt
libs/submodule/include/: ClassName.hpp  submodule.hpp
libs/submodule/src/: ClassName.cpp  submodule.cpp
libs/submodule/tests/: CMakeLists.txt  mock_namespace_classname.cpp  mock_namespace_classname.hpp  tests_namespace_classname.cpp
src/: boot.s  main.c  main.cpp  syscalls.c  sysmem.c
tools/cmake/modules/: platform.cmake
tools/cmake/modules/architectures/arm/arm-cm0/: architecture.cmake  memory-layout.ld
tools/cmake/modules/architectures/arm/arm-cm23tz/: architecture.cmake  memory-layout.ld
tools/cmake/modules/architectures/arm/arm-cm3/: memory-layout.ld
tools/cmake/modules/architectures/arm/arm-cm33/: architecture.cmake
tools/cmake/modules/architectures/arm/arm-cm4/: architecture.cmake  memory-layout.ld
tools/cmake/modules/architectures/arm/arm-cm4fp/: architecture.cmake
tools/cmake/modules/architectures/arm/arm-cm7/: memory-layout.ld
tools/cmake/modules/architectures/arm/arm-cm7fp/: architecture.cmake
tools/cmake/modules/toolchains/arm-none-eabi-gcc/: toolchain.cmake
tools/cmake/modules/toolchains/x86-x64-gcc/: toolchain.cmake
tools/scripts/: clean.sh  format.sh  run.sh  run_ut.sh  setup.sh
